@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.youtube" name="YouTube" version="6.2.0~alpha4" provider-name="bromix">
+<addon id="plugin.video.youtube" name="YouTube" version="6.2.0~alpha5" provider-name="bromix">
     <requires>
         <import addon="xbmc.python" version="2.20.0"/>
         <import addon='script.module.six' version='1.11.0'/>
@@ -19,9 +19,12 @@
 [add] 'Settings -&gt; Advanced -&gt; Use YouTube website urls' for external/alternative players
             eg. Player: MPC-BE, URL: https://www.youtube.com/watch?v=C0NyvxTJGcQ
 [fix] Mark as watched in Kodi 18
+[fix] Reported background progress dialog percentage
+[fix] Playlist items, use video_items instead of playback_items
 [upd] Improve speed of playback starting and resolver
             before: min: 1.5s max: 2.6s median: 1.7s
             after:  min: 0.9s max: 2.6s median: 1.2s
+[chg] refactor logging and system version
 [chg] Localize confirmation
         </news>
         <assets>
