@@ -20,9 +20,12 @@
                     </rules>
                 </playercorefactory>
 [fix] Mark as watched in Kodi 18
+[fix] Reported background progress dialog percentage
+[fix] Playlist items, use video_items instead of playback_items
 [upd] Improve speed of playback starting and resolver
             before: min: 1.5s max: 2.6s median: 1.7s
             after:  min: 0.9s max: 2.6s median: 1.2s
+[chg] refactor logging and system version
 [chg] Localize confirmation
 
 6.1.3
